# House-Price-Prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  Dockerfile.ui  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: mkdocs.yml
docs/docs/: api_ref.md  architecture.md  deployment.md  getting-started.md  index.md
docs/docs/pipelines/: feature.md  inference.md  training.md
models/: model.pkl
models/artifacts/: imputer.json
notebooks/: 00_data_split.ipynb  01_eda.ipynb  03_feature_selection_eng.ipynb  04_baseline.ipynb  05_linear_models.ipynb  06_ensemble_models.ipynb  07_hyperparameter_tuning.ipynb  08_final_model_training.ipynb
reports/: .gitignore
src/api/: main.py  schemas.py  state.py
src/api/v1/: endpoints.py
src/app/: ui.py
src/feature_pipeline/: clean.py  load.py  transform.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
src/utils/: upload_to_s3.py
tests/: test_feature_pipeline.py  test_inference_pipeline.py  test_smoke.py  test_training_pipeline.py
