[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "end-to-end machine learning pipeline to predict housing prices using structured real-estate data. The project covered data collection, cleaning, feature engineering, exploratory data analysis, and model development using classical ML algorithms. Implemented and evaluated multiple models (Linear Regression, Random Forest, XGBoost) to compare performance, with hyperparameter tuning for optimization. The final model was deployed through a simple web interface/API, enabling users to input property details and receive real-time price predictions. This project demonstrates full-cycle ML development, from data preprocessing to deployment."
authors = [
  { name = "Ahmed Muhammad Ahmed\\" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
    "fastapi",
    "uvicorn",
    "boto3",
    "joblib",
    "streamlit",
    "requests",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting


[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.pytest.ini_options]
pythonpath = ["."]

